<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainBuilding"
        android:title="@string/header_main"
        android:icon="@drawable/outline_home_24" />

    <item
        android:id="@+id/laboratoryBuilding"
        android:title="@string/header_lab"
        android:icon="@drawable/outline_science_20" />

    <item
        android:id="@+id/secondBuilding"
        android:title="@string/header_sec"
        android:icon="@drawable/icon_second" />

    <item
        android:id="@+id/routesFragment"
        android:title="@string/header_ways"
        android:icon="@drawable/icon_route" />

    <item
        android:id="@+id/scannerFragment"
        android:title="@string/qrScanner"
        android:icon="@drawable/outline_qr_code_scanner_24" />
</menu>